# sekai-story-indexer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.derived  PLAN.md  README.md  TASKS.md  conftest.py  docker-compose.yml  events_index.json  focus_overrides.json  glossary.json  pyproject.toml  scene_sources.json  scratch_one_event.py  story_order.yaml  summaries_cache.json
.github/workflows/: ci.yml
docs/: DESIGN.md  PLAN.md  TASKS.md  contextual_embeddings_plan.md  deploy.md  derived-hosting.md  file-search-evaluation.md  focus_event_heuristic.md  key_stories.md  nickname_events_review.md  nickname_review.md  summary-reader-deploy.md
docs/archive/: ARCHITECTURE_REVIEW.md  RAG_IMPROVEMENTS.md  story_formatted.md
eval/: golden_local.json  golden_questions.json
sample/: events_index.json
scripts/: check_conventional_commit.py  claude_ingest_summary.py  claude_prep.py  derive_side_glossary.py  drop_truncated_summaries.py  export-production-summary-reader.ps1  export-production-summary-reader.sh  ingest_resume.sh  key_story_report.py  summarize_local.py  summarize_ollama.py  sync.sh
src/linkura_story_indexer/: cli.py  database.py
src/linkura_story_indexer/eval/: __init__.py  io.py  metrics.py  models.py  runner.py
src/linkura_story_indexer/indexer/: processor.py  source_store.py
src/linkura_story_indexer/prompts/: __init__.py  answer_raw_user.md  (+1 more)
src/sekai_story_indexer/: __init__.py  cli.py  console.py  database.py  glossary_candidates.py  lexical.py  localcli.py  story_order.py  summary_export.py
tests/: test_aliases.py  test_answer_audit.py  test_chunker.py  test_cli_chat.py  test_content_and_summaries.py  test_context.py  test_contextual_ingest.py  test_database.py  test_disambiguation.py  test_eval_harness.py  test_eval_local.py  test_generate_config.py  test_glossary_candidates.py  test_ingest_raw_scenes.py  test_ingestion_manifest.py  test_intent.py  test_lexical.py  test_local_query.py  test_parser.py  test_prompts.py  test_query_agent.py  test_query_analysis.py  test_query_engine.py  test_query_router.py  test_query_tools.py  test_quota_breaker.py  test_scoping.py  test_sekai_source.py  test_sessions.py  test_smoke.py  test_source_store.py  test_state_extractor.py  test_story_order.py  test_summarize_limit.py  test_summary_export.py  test_webapp_api.py
webapp/: README.md  sample_events_index.json  server.py  sessions.py
webapp/static/: app.js  index.html  meta.json  styles.css
(+3425 files in other folders)
