[project]
name = "sekai-story-indexer"
version = "0.1.0"
description = "Scripts to index the LLLL story"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "google-genai>=1.73.1",
    "pydantic>=2.13.3",
    "pydantic-ai-slim[google,openai]>=1.86.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "typer>=0.24.2",
    "sudachipy>=0.6.11",
    "sudachidict-core>=20260428",
]

[project.scripts]
indexer = "sekai_story_indexer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sekai_story_indexer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "prek>=0.3.10",
    "pyrefly>=0.62.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
